Cleaned up code
Moved canvas respective code into canvas.js file. Split the mega
function (marked to make it easier) of canvas painting into smaller
functions for each section. Added a giant figure 8 to be displayed
before any questions are asked.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,14 @@ body{
     width:30%;
     background-color: #ffffff;
     padding:0.3em;
+    height:400px;
 }
 
 #ball_canvas{
     margin-left:20%;
+}
+
+#user_question_box{
+    width:50%;
+    margin-top:0.5em;
 }
