--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,35 @@
+@font-face {
+    font-family: 'Bebas';
+    src: url('BebasNeue-webfont.eot');
+    src: url('BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
+         url('BebasNeue-webfont.woff') format('woff'),
+         url('BebasNeue-webfont.ttf') format('truetype'),
+         url('BebasNeue-webfont.svg#bebas_neueregular') format('svg');
+    font-weight:normal;
+    font-style:normal;
+}
+@font-face {
+    font-family: 'PT_Sans';
+    src: url('PTS55F-webfont.eot');
+    src: url('PTS55F-webfont.eot?#iefix') format('embedded-opentype'),
+         url('PTS55F-webfont.woff') format('woff'),
+         url('PTS55F-webfont.ttf') format('truetype'),
+         url('PTS55F-webfont.svg#pt_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body{
     background-color:#dedede;
     margin:0px;
     padding:0px;
+    font-family:PT_Sans, Arial, Helvetica, sans-serif;
+}
+
+h1,h2,h3,h4{
+    font-family:Bebas,Arial, Helvetica, sans-serif;
+    font-weight:normal;
 }
 
 #page{
@@ -23,7 +51,7 @@ body{
     width:50%;
 }
 
-#header_text h2{
+#header_text h1{
     margin:0px;
     padding:0px;
 }
