--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,10 @@ h1,h2,h3,h4{
     height:400px;
 }
 
+#questions_list_container h3{
+    text-align: center;
+}
+
 #ball_canvas{
     margin-left:20%;
 }
